fix: overflow fix

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -24,9 +24,16 @@ button {
   outline: none;
 }
 
+html,
+body {
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
 body {
   background-color: $black-bg;
-  overflow-x: hidden;
 }
 
 .react-player {
